fixed z-index for autocomplete

--- a/app/assets/stylesheets/components/_autocompletes.scss
+++ b/app/assets/stylesheets/components/_autocompletes.scss
@@ -33,6 +33,7 @@
   >* {
     flex: 1;
   }
+
 }
 
 .Autocomplete-edit {
@@ -40,4 +41,8 @@
   justify-content: flex-end;
   font-size: em(8px);
   opacity: 0.5;
+}
+
+.Button--autocomplete {
+
 }
