--- a/app/assets/stylesheets/components/_tiles.scss
+++ b/app/assets/stylesheets/components/_tiles.scss
@@ -4,7 +4,6 @@
   min-width: 340px;
   margin: $size-increment*2 $size-increment*2 0 0;
   box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.15);
-  z-index: $tile-z-index;
 }
 
 .Tile-header {
