--- a/app/assets/stylesheets/variables/_zindexes.scss
+++ b/app/assets/stylesheets/variables/_zindexes.scss
@@ -4,6 +4,4 @@ $page-header-z-index: 5000;
 
 $autocomplete-results-z-index: 4000;
 
-$tile-z-index: 3000;
-
 $main-content-z-index: 2000;
